カスタムトップバーの作成

--- a/_Documents/04_実装/プロジェクト構築手順書.md
+++ b/_Documents/04_実装/プロジェクト構築手順書.md
@@ -99,11 +99,13 @@ chrono = { version = "0.4", features = ["serde"] }
 
 ### 5.1 フロントエンド起動
 ```bash
+cd wireframe-app/
 npm run dev
 ```
 
 ### 5.2 Tauri起動（別ターミナル）
 ```bash
+cd wireframe-app/src-tauri/
 npx tauri dev
 ```
 
